--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
                     <h1
                       class="text-white text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]"
                     >
-                      Hi, I'm Syahdan, a Product Designer
+                      Hi, I'm Syahdan
                     </h1>
                     <h2 class="text-white text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
-                      I design and build digital products that are simple, intuitive, and beautiful. I'm passionate about creating user-centered experiences that solve real
-                      problems.
+                      I build intelligent systems that solve complex problems by leveraging data and cutting-edge algorithms.
                     </h2>
                   </div>
                 </div>
@@ -71,35 +70,27 @@
             </div>
             <h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">About Me</h2>
             <p class="text-white text-base font-normal leading-normal pb-3 pt-1 px-4">
-              I'm a product designer with over 5 years of experience in the tech industry. I've worked on a variety of projects, from mobile apps to web platforms, and I'm always
-              looking for new challenges. My design philosophy is centered around user needs and business goals, ensuring that every product I work on is both functional and
-              aesthetically pleasing.
+              I'm currently pursuing my education as a 2nd year IBDP student at SMA Pradita Dirgantara. I've worked on several projects, from natural language processing to computer vision, and I'm always looking for new challenges.
             </p>
             <h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Skills</h2>
             <div class="flex gap-3 p-3 flex-wrap pr-4">
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">UI/UX Design</p>
+                <p class="text-white text-sm font-medium leading-normal">Python</p>
               </div>
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">User Research</p>
+                <p class="text-white text-sm font-medium leading-normal">Scikit-learn</p>
               </div>
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Prototyping</p>
+                <p class="text-white text-sm font-medium leading-normal">Data modeling</p>
               </div>
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Interaction Design</p>
+                <p class="text-white text-sm font-medium leading-normal">Tensorflow</p>
               </div>
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Visual Design</p>
+                <p class="text-white text-sm font-medium leading-normal">Pytorch</p>
               </div>
               <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Design Systems</p>
-              </div>
-              <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Figma</p>
-              </div>
-              <div class="flex h-8 shrink-0 items-center justify-center gap-x-2 rounded-lg bg-[#283039] pl-4 pr-4">
-                <p class="text-white text-sm font-medium leading-normal">Adobe Creative Suite</p>
+                <p class="text-white text-sm font-medium leading-normal">SQL & no-SQL</p>
               </div>
             </div>
             <h2 class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Projects</h2>
