--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <div class="@[480px]:p-4">
                 <div
                   class="flex min-h-[480px] flex-col gap-6 bg-cover bg-center bg-no-repeat @[480px]:gap-8 @[480px]:rounded-lg items-start justify-end px-4 pb-10 @[480px]:px-10"
-                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("/assets/img/bg1.png");'
+                  style='background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 100%), url("/assets/img/bg1.webp");'
                 >
                   <div class="flex flex-col gap-2 text-left">
                     <h1
@@ -74,7 +74,7 @@
                 <div class="flex gap-4">
                   <div
                     class="bg-center bg-no-repeat aspect-square bg-cover rounded-full min-h-32 w-32"
-                    style='background-image: url("/assets/img/Jadi\ DSCF6182.jpg");'
+                    style='background-image: url("/assets/img/Jadi\ DSCF6182.webp");'
                   ></div>
                   <div class="flex flex-col justify-center">
                     <p class="text-white text-[22px] font-bold leading-tight tracking-[-0.015em]">Syahdan</p>
