--- a/index.html
+++ b/index.html
@@ -249,13 +249,6 @@
                     </button>
                 </div>
             </form>
-            <div class="flex px-4 py-3 justify-start">
-              <button
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-[#0d80f2] text-white text-sm font-bold leading-normal tracking-[0.015em]"
-              >
-                <span class="truncate">Send</span>
-              </button>
-            </div>
           </div>
         </div>
         <footer class="flex justify-center">
@@ -290,7 +283,7 @@
                   </div>
                 </a>
               </div>
-              <p class="text-[#9cabba] text-base font-normal leading-normal">@ 2024 Alex. All rights reserved.</p>
+              <p class="text-[#9cabba] text-base font-normal leading-normal">@ 2025 Syahdan. All rights reserved.</p>
             </footer>
           </div>
         </footer>
